[project]
name = "vipm-final"
version = "0.1.0"
description = "CNN project to classify sport images even in degraded conditions"
authors = [
    {name = "Davoleo, Moeasy64"}
]
requires-python = ">=3.12"
dependencies = [
    "tf-keras (>=2.20.1,<3.0.0)",
    "tensorflow-rocm @ https://repo.radeon.com/rocm/manylinux/rocm-rel-7.2/tensorflow_rocm-2.20.0.dev0%2Bselfbuilt-cp312-cp312-manylinux_2_28_x86_64.whl",
    "matplotlib (>=3.10.8,<4.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false